tests/baselines/reference/conflictingTypeParameterSymbolTransfer.errors.txt
conflictingTypeParameterSymbolTransfer.ts(14,16): error TS2304: Cannot find name 'U'.


==== conflictingTypeParameterSymbolTransfer.ts (1 errors) ====
    // @strict
    
    // Via #56620
    
    class Base<U> { }
    export class C2<T> extends Base<unknown> {
        T: number;
        constructor(T: number) {
            super();
            // Should not error
            this.T = T;
    
            // Should error
            let a: U = null;
                   ~
!!! error TS2304: Cannot find name 'U'.
        }
    }
    